# ioos-python-package-skeleton

./: .buildinfo  .doctr-files  .gitignore  .pre-commit-config.yaml  .travis.yml  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  genindex.html  github_deploy_key.enc  how2package4ioos.html  index.html  ioos_pkg_skeleton.html  objects.inv  py-modindex.html  pyproject.toml  requirements-dev.txt  search.html  searchindex.js  setup.cfg  setup.py  tutorial-output.html  tutorial-output.ipynb  tutorial.html  tutorial.ipynb
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml
.github/workflows/: deploy-docs.yml  pre-commit.yml  publish-to-pypi.yml  pypi.yml  tests.yml
_modules/: index.html
_modules/ioos_pkg_skeleton/: ioos_pkg_skeleton.html
_modules/mymodule/: mymodule.html
_sources/: how2package4ioos.md.txt  mymodule.rst.txt
dev/: .doctr-files  genindex.html  how2package4ioos.html  index.html  ioos_pkg_skeleton.html  mymodule.html  objects.inv  py-modindex.html  search.html  searchindex.js  tutorial.html
dev/_modules/: index.html
dev/_modules/ioos_pkg_skeleton/: ioos_pkg_skeleton.html
dev/_modules/mymodule/: mymodule.html
dev/_static/: documentation_options.js
docs/: Makefile
docs/source/: conf.py  how2package4ioos.md  index.rst
ioos_pkg_skeleton/: __init__.py  ioos_pkg_skeleton.py
mymodule/: __init__.py  _version.py  mymodule.py
notebooks/: IOOS-Python-Package-Skeleton.ipynb  tutorial.ipynb
tests/: test_ioos_pkg_skeleton.py  test_mymodule.py
version-v0.0.1/: .doctr-files  genindex.html  index.html  mymodule.html  objects.inv  py-modindex.html  search.html  tutorial.html
version-v1.0.0/: .doctr-files  genindex.html  ioos_pkg_skeleton.html  objects.inv  searchindex.js
version-v1.0.0/_modules/: index.html
version-v1.0.0/_modules/ioos_pkg_skeleton/: ioos_pkg_skeleton.html
