[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=42",
  "setuptools_scm[toml]>=3.4",
  "wheel",
]

[project]
name = "ioos-pkg-skeleton"
description = "MY AWESOME MODULE"
readme = "README.md"
license = {text = "BSD-3-Clause", file = "LICENSE.txt"}
authors = [
    {name = "AUTHOR NAME", email = "AUTHOR@EMAIL.COM"},
]
requires-python = ">=3.6"
dynamic = [
  "version",
]
dependencies = [
  "numpy",
  "requests",
]
[project.urls]
documentation = "https://ioos.github.io/ioos-python-package-skeleton"
homepage = "https://github.com/ioos/ioos-python-package-skeleton"
repository = "https://github.com/ioos/ioos-python-package-skeleton"

[tool.setuptools]
packages = ["ioos_pkg_skeleton"]
zip-safe = false
include-package-data = true

[tool.setuptools_scm]
write_to = "ioos_pkg_skeleton/_version.py"
write_to_template = "__version__ = '{version}'"

[tool.black]
line-length = 79

[tool.interrogate]
ignore-init-method = true
ignore-init-module = false
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-module = false
fail-under = 95
exclude = ["setup.py", "docs", "tests"]
verbose = 1
quiet = false
color = true
