[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=42",
  "setuptools-scm[toml]>=3.4",
  "wheel",
]

[project]
name = "ioos-pkg-skeleton"
description = "MY AWESOME MODULE"
readme = "README.md"
license = { file = "LICENSE.txt" }
authors = [
  { name = "AUTHOR NAME", email = "AUTHOR@EMAIL.COM" },
]
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dynamic = [
  "version",
]
dependencies = [
  "numpy",
  "requests",
]
urls.documentation = "https://ioos.github.io/ioos-python-package-skeleton"
urls.homepage = "https://github.com/ioos/ioos-python-package-skeleton"
urls.repository = "https://github.com/ioos/ioos-python-package-skeleton"

[tool.setuptools]
packages = [ "ioos_pkg_skeleton" ]
zip-safe = false
include-package-data = true

[tool.setuptools_scm]
write_to = "ioos_pkg_skeleton/_version.py"
write_to_template = "__version__ = '{version}'"

[tool.ruff]
target-version = "py311"
line-length = 79
per-file-ignores."docs/conf.py" = [ "E402" ]
select = [
  "F", # flakes
  "I", # import sorting
  "U", # upgrade
]

[tool.interrogate]
ignore-init-method = true
ignore-init-module = false
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-module = false
fail-under = 95
exclude = [ "setup.py", "docs", "tests" ]
verbose = 1
quiet = false
color = true
