[versioneer]
VCS = git
style = pep440
versionfile_source = mymodule/_version.py
versionfile_build = mymodule/_version.py
tag_prefix = v
parentdir_prefix =

[tool:pytest]
flake8-max-line-length = 105
flake8-ignore =
    docs/* ALL
    versioneer.py ALL
    mymodule/_version.py ALL

[metadata]
description-file = README.md
license_file = LICENSE.txt

[isort]
atomic=true
force_grid_wrap=0
include_trailing_comma=true
lines_after_imports=2
lines_between_types=1
multi_line_output=3
not_skip=__init__.py
use_parentheses=true
known_first_party=attr

[check-manifest]
ignore = 
    .travis.yml
    .coveragerc
    Makefile
    docs
    docs/*
    *.enc
    notebooks
    notebooks/*
    tests
    tests/*
